--- a/css/containers.css
+++ b/css/containers.css
@@ -25,6 +25,7 @@
     padding: 2em;
     border-radius: 10px;
     box-sizing: border-box;
+    background-color: rgba(255,255,255,0.6);
     box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
 
