changed radio buttons

--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,7 @@
 header{
-  background-image: linear-gradient(to bottom right,hsl(72, 11%, 45%), hsl(72, 11%, 50%));
+  background-image: linear-gradient(to bottom right,hsl(72, 11%, 45%), hsl(72, 11%, 35%));
   padding: 1em;
+  box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
 
 header h1, h2{
