--- a/css/components.css
+++ b/css/components.css
@@ -114,6 +114,7 @@ input[type=text], input[type=password]{
 a{
     color: black;
     text-decoration: none;
+    cursor: pointer;
 }
 
 a:visited {color: black;}
