--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,11 @@ header h1, h2{
   margin: 0;
 }
 
+header h1{
+  font-family: 'Lobster', cursive;
+  font-weight: normal;
+}
+
 header h2{
   font-style: italic;
   font-size: small;
