--- a/css/layout.css
+++ b/css/layout.css
@@ -6,12 +6,11 @@ html{
 
 body {
   margin: 0 auto;
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column; 
   font-family: Arial, Helvetica, sans-serif;
   background-color: #FFFAE2;
+  min-height: 100%;
 }
 
 /* ---------- LOGIN/REGISTER LAYOUT ---------- */
