--- a/css/layout.css
+++ b/css/layout.css
@@ -88,26 +88,26 @@ header{
 
 /* ---------- HOMEPAGE LAYOUT ---------- */
 
-#dogs_information{
+#homepage-profile {
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   text-align: center;
 }
 
 @media screen and (max-width: 1250px){
-  #dogs_information{
+  #homepage-profile {
     grid-template-columns: 33% 33% 33%;
   }
 }
 
 @media screen and (max-width: 980px){
-  #dogs_information{
+  #homepage-profile {
     grid-template-columns: 50% 50%;
   }
 }
 
 @media screen and (max-width: 650px){
-  #dogs_information{
+  #homepage-profile {
     grid-template-columns: 100%;
   }
 }
