--- a/css/containers.css
+++ b/css/containers.css
@@ -14,8 +14,8 @@
 #proposals, 
 #posts, 
 #question,
-#advanced_search,
-#displayPets .profile,
+#advanced-search,
+#search-pet-profile .profile,
 #update #updatecontainers .updatepetinfo,
 #update #updatecontainers .updateposts,
 #update #updatecontainers .add-photo,
@@ -29,7 +29,8 @@
     box-shadow:	0 0.125rem 0.5rem rgba(0, 0, 0, .3), 0 0.0625rem 0.125rem rgba(0, 0, 0, .2);
 }
 
-/* || Speech Bubbles */
+/* || Speech Bubbles */ 
+/* Magic happens bellow, only zini knows  dont touch while refactor */
 
 #pet .infoGrid #question input[type=text], 
 #pet .infoGrid #question #uniquequestion p{
