--- a/css/pages/profile.css
+++ b/css/pages/profile.css
@@ -1,5 +1,5 @@
 /* -------------  Common Between Profile Types ------------- */
-.profileHeader .image img{
+.profile-header .profile-image img{
   position: relative;
   border-radius: 50%;
   display: block;
@@ -7,39 +7,33 @@
   margin-right: auto;
 }
 
-.profileHeader .image{
+.profile-header .profile-image{
   padding-top: 6em;
 }
 
-.profileHeader .name{
+.profile-header .profile-text{
   text-align: center;
 }
   
-.infoGrid{
+#profile-grid {
   text-align: left;
 }
 
-#information_person p{
+#information-profile {
   border-bottom: solid;
   padding-bottom: 5px;
   border-width: 1px;
 }
 
-#information_pet #information_and_update, 
-#proposals #uniqueproposal{
+#information-profile-header, 
+#proposals .unique-proposal {
   display: flex;
   align-items: center;
   justify-content: left;
 }
 
-#information_pet #information_and_update #moreinfo{
+#information-profile-header #information-profile-more {
   margin-left: auto;
-}
-
-#information_pet p{
-  border-bottom: solid;
-  padding-bottom: 5px;
-  border-width: 1px;
 }
 
 .name_and_favorite{
@@ -48,24 +42,24 @@
   justify-content: center;
 }
 
-#proposals #adoption-propose{
+#proposals #adoption-proposal {
   padding-top: 1em;
   display: flex;
   justify-content: center;
 }
 
-#question{
+#question {
   display: flex;
   flex-direction: column;
 }
 
-#question .questionform{
+#question .question-form {
   padding-top: 1em;  
   display: flex;
   flex-direction: column;
 }
 
-#pet .infoGrid #question input[type=submit]{
+#pet #profile-grid #question input[type=submit]{
   margin-top: 1em;
   margin-left: auto;
 }
