Moving things from layout to specific pages in css

--- a/css/containers.css
+++ b/css/containers.css
@@ -1,6 +1,5 @@
-/*-----------------------------------------------
------------------- CONTAINERS -------------------
-------------------------------------------------*/
+/* Containers model for most of the boxes on our webpage*/
+
 /* Add Pet */
 #add-pet #add-pet-container,
 /* Pet Detailed Information */
