--- a/css/pages/pet_information.css
+++ b/css/pages/pet_information.css
@@ -1,3 +1,48 @@
+/* ---------- PET INFORMATION LAYOUT ---------- */
+
+#pet-information #pet-information-sidebar {
+    padding-top: 1em;
+    flex: 1;
+    text-align: center;
+  }
+  
+  #pet-information #pet-detailed-information{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  #pet-information #container {
+    flex: 4;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  #pet-information #top-container {
+    display: flex;
+  }
+  
+  #pet-information #photos,
+  #pet-information #biography {
+      flex: 1;
+  }
+  
+  @media screen and (max-width: 1260px) {
+    #pet-information #top-container{
+      flex-direction: column;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    #pet-information {
+      display: flex;
+      flex-direction: column;
+    }
+    #pet-information #pet-detailed-information {
+      flex-direction: row;
+    }
+  }
+  
+
 #pet-information #container h2 {
     padding-bottom: 1em;
 }
