--- a/css/pages/login_register.css
+++ b/css/pages/login_register.css
@@ -1,8 +1,44 @@
+/* ---------- LOGIN/REGISTER LAYOUT ---------- */
+.login, #register{
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .container-forms{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto auto;
+  }
+  
+  .gender{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .genderoptions{
+    display: flex;
+    flex-direction: row;
+  }
+  
+  @media screen and (max-width: 1150px){
+    .login, #register{
+      flex-direction: column;
+      gap: 0;
+    }
+    .container-forms{
+      order: 2
+    }
+    .name-and-slogan{
+      order: 1;
+    }
+  }
+  
+
 body, html{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("../images/family-dog.jpeg");
+    background-image: url("../../images/family-dog.jpeg");
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -22,37 +58,37 @@ body, html{
     gap: 10em;
 }
 
-.name_slogan{
+.name-slogan{
     text-align: center;
 }
 
-.name_slogan a{
+.name-slogan a{
     color: white;
     text-decoration: none;
 }
 
-.name_slogan h1{
+.name-slogan h1{
     font-size: 5em;
     margin: 0;
     animation: bounceIn 10s infinite;
 }
 
-.name_slogan h2{
+.name-slogan h2{
     font-style: italic;
 }
 
-.container_forms{
+.container-forms{
     background-color:rgba(256, 256, 256, 0.6);
     text-align: center;
     padding: 3em;
     width: 20em;
 }
 
-.login .container_forms{
+.login .container-forms{
     height: 17;
 }
 
-#register .container_forms{
+#register .container-forms{
     height: 30em;
 }
 
@@ -60,7 +96,7 @@ body, html{
     padding-top: 1em;
 }
 
-.submit_register{
+.submit-register{
     padding-top: 0.5em;
 }
 
