Check all pages on w3 validatow again

--- a/css/containers.css
+++ b/css/containers.css
@@ -19,7 +19,7 @@
 #advanced-search,
 #search-pet-profile .profile,
 /* Update User/Pet Profile */
-#update .update-form {
+#update-page .update-form {
     margin:1em;
     padding: 2em;
     border-radius: 10px;
